# clinsync-ai

./: .gitignore
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: audio.py  chat.py  health.py  vision.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  derm_foundation_wrapper.py  hear_wrapper.py  huggingface_llm.py  medasr_wrapper.py  medgemma_wrapper.py  ollama_orchestrator.py
backend/app/services/: __init__.py  ai_orchestrator.py  firebase_service.py  redis_queue.py  soap_generator.py  speech_recognition_service.py  webrtc_ai_handler.py  webrtc_manager.py
backend/app/utils/: __init__.py  fhir_helpers.py
backend/scripts/: download_models.py  setup_ollama.py  test_voice_chat_api.py
backend/tests/: __init__.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/ai/: AnalysisPanel.tsx
frontend/components/chat/: AIPanel.tsx  ChatInput.tsx  ChatInterface.tsx  ChatSocketProvider.tsx  MessageList.tsx
frontend/hooks/: useApiHealth.ts  useChatSocket.ts  useOfflineQueue.ts  useOnlineStatus.ts
frontend/lib/: api.ts  audio.ts  offline-db.ts  service-worker.ts
frontend/public/: sw.js
frontend/stores/: chatStore.ts  useAnalysisStore.ts  useConnectionStore.ts  useConsultationContext.ts  useConsultationStore.ts  usePatientStore.ts  useUIStore.ts
(+25 files in other folders)
